# Smart-Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Board.hpp  GUI.hpp  Game.hpp  TicTacToe.tmp
src/: GUI.cpp  Game.bak.cpp  Game.cpp
